elastic-container/elastic-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: elastic
  name: elastic
  namespace: elastic-stack
spec:
  selector:
    app: elastic
  type: ClusterIP
  ports:
  - port: 9200
    targetPort: 9200
    name: port1
    protocol: TCP
  - port: 9300
    targetPort: 9300
    name: port2
    protocol: TCP
