elastic-container/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  rules:
    - http:
        paths:
        - path: /kibana
          backend:
            serviceName: kibana
            servicePort: 5601
